--- a/static/index.html
+++ b/static/index.html
@@ -219,6 +219,53 @@
             background: #142428;
             color: #e2e8f0;
         }
+
+        /* Range slider styling */
+        input[type="range"] {
+            -webkit-appearance: none;
+            appearance: none;
+            background: transparent;
+            cursor: pointer;
+        }
+
+        input[type="range"]::-webkit-slider-runnable-track {
+            background: linear-gradient(to right, #00d4aa 0%, #22d3ee 100%);
+            height: 6px;
+            border-radius: 3px;
+        }
+
+        input[type="range"]::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            margin-top: -5px;
+            background: #fff;
+            border: 2px solid #00d4aa;
+            height: 16px;
+            width: 16px;
+            border-radius: 50%;
+            box-shadow: 0 2px 6px rgba(0, 212, 170, 0.3);
+            transition: all 0.2s ease;
+        }
+
+        input[type="range"]::-webkit-slider-thumb:hover {
+            transform: scale(1.1);
+            box-shadow: 0 2px 10px rgba(0, 212, 170, 0.5);
+        }
+
+        input[type="range"]::-moz-range-track {
+            background: linear-gradient(to right, #00d4aa 0%, #22d3ee 100%);
+            height: 6px;
+            border-radius: 3px;
+        }
+
+        input[type="range"]::-moz-range-thumb {
+            background: #fff;
+            border: 2px solid #00d4aa;
+            height: 12px;
+            width: 12px;
+            border-radius: 50%;
+            box-shadow: 0 2px 6px rgba(0, 212, 170, 0.3);
+        }
     </style>
 </head>
 <body class="min-h-screen font-sans text-slate-200 antialiased">
@@ -245,12 +292,21 @@
                             <p class="text-xs text-slate-400">AI-Powered Analysis</p>
                         </div>
                     </div>
-                    <a href="/docs" class="flex items-center space-x-2 px-4 py-2 rounded-lg glass-light hover:bg-white/5 transition-all text-sm text-slate-300 hover:text-cyan-400">
-                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
-                        </svg>
-                        <span>API Docs</span>
-                    </a>
+                    <div class="flex items-center space-x-3">
+                        <button @click="showSettings = true" class="flex items-center space-x-2 px-4 py-2 rounded-lg glass-light hover:bg-white/5 transition-all text-sm text-slate-300 hover:text-cyan-400">
+                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"/>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
+                            </svg>
+                            <span>Settings</span>
+                        </button>
+                        <a href="/docs" class="flex items-center space-x-2 px-4 py-2 rounded-lg glass-light hover:bg-white/5 transition-all text-sm text-slate-300 hover:text-cyan-400">
+                            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
+                            </svg>
+                            <span>API Docs</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </header>
@@ -578,6 +634,91 @@
                 <p>Construction Submittal Review Agent &middot; Powered by QCS 2024 Specifications</p>
             </div>
         </footer>
+
+        <!-- Settings Modal -->
+        <div x-show="showSettings" x-cloak class="fixed inset-0 z-50 flex items-center justify-center p-4" @keydown.escape.window="showSettings = false">
+            <!-- Backdrop -->
+            <div class="absolute inset-0 bg-black/60 backdrop-blur-sm" @click="showSettings = false"></div>
+
+            <!-- Modal -->
+            <div x-show="showSettings" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 scale-95" x-transition:enter-end="opacity-100 scale-100" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-95" class="relative w-full max-w-lg glass rounded-2xl p-6 glow">
+                <!-- Header -->
+                <div class="flex items-center justify-between mb-6">
+                    <div class="flex items-center space-x-3">
+                        <div class="w-10 h-10 rounded-lg bg-cyan-500/20 flex items-center justify-center">
+                            <svg class="w-5 h-5 text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"/>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
+                            </svg>
+                        </div>
+                        <h2 class="text-xl font-semibold text-white">Settings</h2>
+                    </div>
+                    <button @click="showSettings = false" class="text-slate-400 hover:text-white transition-colors">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+                        </svg>
+                    </button>
+                </div>
+
+                <!-- Settings Form -->
+                <div class="space-y-6">
+                    <!-- Model Selection -->
+                    <div>
+                        <label class="block text-sm font-medium text-slate-300 mb-2">LLM Model</label>
+                        <select x-model="settings.model" class="w-full input-dark rounded-lg px-4 py-3 appearance-none cursor-pointer">
+                            <option value="auto">Auto (Claude Opus 4.5 with GPT-5.2 fallback)</option>
+                            <option value="claude">Claude Opus 4.5</option>
+                            <option value="gpt-5">GPT-5.2</option>
+                        </select>
+                        <p class="text-xs text-slate-500 mt-1">Auto mode uses Claude Opus 4.5 as primary with automatic GPT-5.2 fallback</p>
+                    </div>
+
+                    <!-- Temperature -->
+                    <div>
+                        <label class="block text-sm font-medium text-slate-300 mb-2">
+                            Temperature: <span class="text-cyan-400" x-text="settings.temperature"></span>
+                        </label>
+                        <input type="range" x-model="settings.temperature" min="0" max="1" step="0.1" class="w-full h-2 bg-deep-700 rounded-lg appearance-none cursor-pointer accent-cyan-500">
+                        <div class="flex justify-between text-xs text-slate-500 mt-1">
+                            <span>Deterministic</span>
+                            <span>Creative</span>
+                        </div>
+                    </div>
+
+                    <!-- Max Tokens -->
+                    <div>
+                        <label class="block text-sm font-medium text-slate-300 mb-2">Max Response Tokens</label>
+                        <select x-model="settings.maxTokens" class="w-full input-dark rounded-lg px-4 py-3 appearance-none cursor-pointer">
+                            <option value="2048">2048 (Faster)</option>
+                            <option value="4096">4096 (Default)</option>
+                            <option value="8192">8192 (Detailed)</option>
+                        </select>
+                    </div>
+
+                    <!-- Retrieval Top K -->
+                    <div>
+                        <label class="block text-sm font-medium text-slate-300 mb-2">
+                            Specification Context: <span class="text-cyan-400" x-text="settings.topK"></span> chunks
+                        </label>
+                        <input type="range" x-model="settings.topK" min="3" max="15" step="1" class="w-full h-2 bg-deep-700 rounded-lg appearance-none cursor-pointer accent-cyan-500">
+                        <div class="flex justify-between text-xs text-slate-500 mt-1">
+                            <span>Less context (faster)</span>
+                            <span>More context (thorough)</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Actions -->
+                <div class="flex items-center justify-between mt-8 pt-6 border-t border-white/10">
+                    <button @click="resetSettings()" class="text-sm text-slate-400 hover:text-white transition-colors">
+                        Reset to defaults
+                    </button>
+                    <button @click="showSettings = false" class="px-6 py-2 btn-gradient text-deep-900 font-medium rounded-lg">
+                        Done
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -591,6 +732,13 @@
                 error: null,
                 result: null,
                 isDragging: false,
+                showSettings: false,
+                settings: {
+                    model: 'auto',
+                    temperature: 0,
+                    maxTokens: '4096',
+                    topK: 8,
+                },
 
                 handleFileSelect(event) {
                     const file = event.target.files[0];
@@ -619,6 +767,15 @@
                     return mb.toFixed(2) + ' MB';
                 },
 
+                resetSettings() {
+                    this.settings = {
+                        model: 'auto',
+                        temperature: 0,
+                        maxTokens: '4096',
+                        topK: 8,
+                    };
+                },
+
                 async submitReview() {
                     if (!this.file) return;
 
@@ -633,6 +790,11 @@
                     if (this.additionalContext) {
                         formData.append('additional_context', this.additionalContext);
                     }
+                    // Add model settings
+                    formData.append('model', this.settings.model);
+                    formData.append('temperature', this.settings.temperature);
+                    formData.append('max_tokens', this.settings.maxTokens);
+                    formData.append('top_k', this.settings.topK);
 
                     try {
                         const response = await fetch('/api/review', {
