--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Construction Submittal Review Agent</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -453,6 +454,67 @@
                     </div>
                 </div>
 
+                <!-- Thinking Panel -->
+                <div x-show="loading || reasoningSteps.length > 0" x-cloak x-transition class="mt-6 glass rounded-2xl p-6 glow-sm">
+                    <!-- Header -->
+                    <div class="flex items-center justify-between cursor-pointer" @click="showThinking = !showThinking">
+                        <div class="flex items-center space-x-3">
+                            <div class="w-10 h-10 rounded-lg bg-purple-500/20 flex items-center justify-center">
+                                <svg class="w-5 h-5 text-purple-400" :class="{'animate-pulse': loading}" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z"/>
+                                </svg>
+                            </div>
+                            <div>
+                                <h3 class="text-lg font-semibold text-white">Thinking</h3>
+                                <p class="text-xs text-slate-400" x-text="loading ? 'Processing your submittal...' : 'Review process completed'"></p>
+                            </div>
+                        </div>
+                        <svg class="w-5 h-5 text-slate-400 transition-transform" :class="{'rotate-180': showThinking}" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/>
+                        </svg>
+                    </div>
+
+                    <!-- Steps -->
+                    <div x-show="showThinking" x-collapse class="mt-4 space-y-3">
+                        <template x-for="step in reasoningSteps" :key="step.step">
+                            <div class="flex items-start space-x-3 p-3 glass-light rounded-lg transition-all" :class="{'border-l-2 border-cyan-500': step.status === 'completed', 'border-l-2 border-purple-500 animate-pulse': step.status === 'in_progress', 'border-l-2 border-slate-600': step.status === 'pending', 'border-l-2 border-amber-500': step.status === 'skipped'}">
+                                <!-- Status Icon -->
+                                <div class="flex-shrink-0 mt-0.5">
+                                    <template x-if="step.status === 'completed'">
+                                        <svg class="w-5 h-5 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
+                                        </svg>
+                                    </template>
+                                    <template x-if="step.status === 'in_progress'">
+                                        <svg class="w-5 h-5 text-purple-400 animate-spin" fill="none" viewBox="0 0 24 24">
+                                            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                                            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4z"></path>
+                                        </svg>
+                                    </template>
+                                    <template x-if="step.status === 'pending'">
+                                        <svg class="w-5 h-5 text-slate-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <circle cx="12" cy="12" r="10" stroke-width="2" stroke-dasharray="4 4"/>
+                                        </svg>
+                                    </template>
+                                    <template x-if="step.status === 'skipped'">
+                                        <svg class="w-5 h-5 text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5l7 7-7 7M5 5l7 7-7 7"/>
+                                        </svg>
+                                    </template>
+                                </div>
+                                <!-- Content -->
+                                <div class="flex-1 min-w-0">
+                                    <div class="flex items-center justify-between">
+                                        <p class="font-medium text-white" x-text="step.title"></p>
+                                        <span x-show="step.duration_ms" class="text-xs text-slate-500" x-text="(step.duration_ms / 1000).toFixed(1) + 's'"></span>
+                                    </div>
+                                    <p class="text-sm text-slate-400 mt-0.5" x-text="step.description"></p>
+                                </div>
+                            </div>
+                        </template>
+                    </div>
+                </div>
+
                 <!-- Results -->
                 <div x-show="result" x-cloak x-transition class="mt-8 space-y-6">
                     <!-- Decision Banner -->
@@ -733,6 +795,9 @@
                 result: null,
                 isDragging: false,
                 showSettings: false,
+                showThinking: true,
+                reasoningSteps: [],
+                stepAnimationInterval: null,
                 settings: {
                     model: 'auto',
                     temperature: 0,
@@ -776,12 +841,50 @@
                     };
                 },
 
+                startReasoningAnimation() {
+                    // Initialize steps with pending status
+                    this.reasoningSteps = [
+                        { step: 1, title: "Parsing Document", description: "Extracting text and structure from PDF...", status: "in_progress", duration_ms: null },
+                        { step: 2, title: "Analyzing Images", description: "Processing diagrams and drawings...", status: "pending", duration_ms: null },
+                        { step: 3, title: "Retrieving Specifications", description: "Searching QCS 2024 knowledge base...", status: "pending", duration_ms: null },
+                        { step: 4, title: "Generating Review", description: "Evaluating compliance with specifications...", status: "pending", duration_ms: null },
+                        { step: 5, title: "Validating Response", description: "Verifying citations and formatting...", status: "pending", duration_ms: null },
+                    ];
+
+                    // Animate through steps
+                    let currentStep = 0;
+                    const stepDurations = [1500, 2000, 2500, 4000, 1000]; // Estimated durations
+
+                    const advanceStep = () => {
+                        if (currentStep < this.reasoningSteps.length - 1) {
+                            this.reasoningSteps[currentStep].status = "completed";
+                            this.reasoningSteps[currentStep].duration_ms = stepDurations[currentStep];
+                            currentStep++;
+                            this.reasoningSteps[currentStep].status = "in_progress";
+                        }
+                    };
+
+                    // Advance step every ~2 seconds (simulated)
+                    this.stepAnimationInterval = setInterval(advanceStep, 2000);
+                },
+
+                stopReasoningAnimation() {
+                    if (this.stepAnimationInterval) {
+                        clearInterval(this.stepAnimationInterval);
+                        this.stepAnimationInterval = null;
+                    }
+                },
+
                 async submitReview() {
                     if (!this.file) return;
 
                     this.loading = true;
                     this.error = null;
                     this.result = null;
+                    this.showThinking = true;
+
+                    // Start animated reasoning steps
+                    this.startReasoningAnimation();
 
                     const formData = new FormData();
                     formData.append('file', this.file);
@@ -804,12 +907,25 @@
 
                         const data = await response.json();
 
+                        // Stop animation and use actual steps from API
+                        this.stopReasoningAnimation();
+
                         if (data.success) {
                             this.result = data;
+                            // Replace animated steps with actual steps from API
+                            if (data.reasoning_steps && data.reasoning_steps.length > 0) {
+                                this.reasoningSteps = data.reasoning_steps;
+                            }
                         } else {
                             this.error = data.error || 'Review failed';
+                            // Mark remaining steps as failed
+                            this.reasoningSteps = this.reasoningSteps.map(s => ({
+                                ...s,
+                                status: s.status === 'in_progress' ? 'failed' : s.status
+                            }));
                         }
                     } catch (e) {
+                        this.stopReasoningAnimation();
                         this.error = 'Network error: ' + e.message;
                     } finally {
                         this.loading = false;
